--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,7 @@
+html {
+    width: 100%;
+    height: 100%;
+}
 body {
     padding-top: 60px;
     padding-bottom: 20px;
@@ -6,9 +10,9 @@ body {
     margin-right: auto;
     margin: 0 auto;
 }
-.row {
-    padding-top: 15px;
-    padding-left: 15px;
+.container {
+    position: relative;
+    width: 960px;
 }
 #map-canvas {
     width: 600px;
@@ -24,10 +28,5 @@ body {
     background:#D8D8D8;
     border-radius: 10%;
     box-shadow: 0 0 10px -1px #000, 0 0;
-    margin: 0 auto;
-}
-.place-list {
-    width: 600px;
-    height: 400px;
     margin: 0 auto;
 }
