--- a/css/screen.css
+++ b/css/screen.css
@@ -14,6 +14,10 @@ body {
     position: relative;
     width: 960px;
 }
+.place-list {
+    height: 800px;
+    overflow: scroll;
+}
 #map-canvas {
     width: 600px;
     height: 400px;
